[DAQ-4468] make collections returned from ScanDataPoint immutable
use streams where possible, and further code clean up

Change-Id: If83a8cc5aab01fede73b9738f7157675a16d450a